--- a/src/styles.css
+++ b/src/styles.css
@@ -13,9 +13,9 @@
   flex-grow: 1;
 }
 .media {
-  height: 140px;
+  height: 100%;
   padding: 20px;
-  width: 140px;
+  width: 80%;
   display: block;
   margin: 0 auto;
 }
